force-app/main/default/objects/Absence__c/fields/AbsenceManager__c.field-meta.xml
<CustomField>
    <fullName>AbsenceManager__c</fullName>
    <label>Absence Manager</label>
    <referenceTo>AbsenceManager__c</referenceTo>
    <relationshipLabel>Absences</relationshipLabel>
    <relationshipName>Absences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>