force-app/main/default/objects/Absence__c/fields/Approval__c.field-meta.xml
<CustomField>
    <fullName>Approval__c</fullName>
    <label>Approval</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ausstehend</fullName>
            </value>
            <value>
                <fullName>Erteilt</fullName>
            </value>
            <value>
                <fullName>Abgelehnt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>