force-app/main/default/objects/Absence__c/fields/Certificate__c.field-meta.xml
<CustomField>
    <fullName>Certificate__c</fullName>
    <label>Certificate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kein Nachweis erforderlich</fullName>
            </value>
            <value>
                <fullName>Nachweis/Ärztliches benötigt</fullName>
            </value>
            <value>
                <fullName>Nachweis/Ärztliches Attest erbracht</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>