force-app/main/default/objects/Absence__c/fields/DangerToEmployees__c.field-meta.xml
<CustomField>
    <fullName>DangerToEmployees__c</fullName>
    <label>Danger To Employees</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ja</fullName>
            </value>
            <value>
                <fullName>Nein</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>