force-app/main/default/objects/Absence__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Urlaub</fullName>
            </value>
            <value>
                <fullName>Überstundenausgleich</fullName>
            </value>
            <value>
                <fullName>Fortbildung</fullName>
            </value>
            <value>
                <fullName>Elternzeit</fullName>
            </value>
            <value>
                <fullName>Sonderurlaub (bezahlt)</fullName>
            </value>
            <value>
                <fullName>Sonderurlaub (unbezahlt)</fullName>
            </value>
            <value>
                <fullName>Krankheit</fullName>
            </value>
            <value>
                <fullName>Kein Grund</fullName>
            </value>
            <value>
                <fullName>Sonstiges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>