force-app/main/default/objects/Absence__c/fields/Workdays__c.field-meta.xml
<CustomField>
    <fullName>Workdays__c</fullName>
    <label>Workdays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>